Fix flexer vertical alignment

--- a/Blazura/Components/Flexer.scss
+++ b/Blazura/Components/Flexer.scss
@@ -20,11 +20,15 @@
 	}
 
 	&.middle {
-		justify-content: center;
+		align-items: center;
 	}
 
 	&.bottom {
-		justify-content: end;
+		align-items: end;
+	}
+
+	&.stretch {
+		align-items: stretch;
 	}
 
 	&.evenFill {
